--- a/opendaylight/md-sal/sal-common-impl/pom.xml
+++ b/opendaylight/md-sal/sal-common-impl/pom.xml
@@ -32,6 +32,14 @@
             <artifactId>org.eclipse.xtend.lib</artifactId>
         </dependency>
         <dependency>
+        <groupId>org.opendaylight.yangtools</groupId>
+        <artifactId>yang-data-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-model-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
