--- a/opendaylight/md-sal/sal-rest-connector/pom.xml
+++ b/opendaylight/md-sal/sal-rest-connector/pom.xml
@@ -57,6 +57,10 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller</groupId>
+      <artifactId>sal-remote</artifactId>
+     </dependency>
     
     <!-- Testing Dependencies -->
     <dependency>
