--- a/opendaylight/md-sal/sal-binding-broker/pom.xml
+++ b/opendaylight/md-sal/sal-binding-broker/pom.xml
@@ -110,6 +110,7 @@
                             org.opendaylight.controller.sal.binding.impl.*,
                             org.opendaylight.controller.sal.binding.codegen,
                             org.opendaylight.controller.sal.binding.codegen.*,
+                            org.opendaylight.controller.md.sal.binding.impl,
                             <!--org.opendaylight.controller.sal.binding.dom.*,-->
                             org.opendaylight.controller.sal.binding.osgi.*,
                             org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.controller.md.sal.binding.impl.rev131028
