Unify jacoco versions to 0.6.2.201302030002
This cleans up previously unused pluginManagement sections and bumps
jacoco version 0.6.2.201302030002 (previously used by config subsys).

Change-Id: I027b219e7fd0225fe2ef12cbdcc1f7d47509e993
Signed-off-by: Robert Varga <rovarga@cisco.com>
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/forwardingrulesmanager/integrationtest/pom.xml
+++ b/opendaylight/forwardingrulesmanager/integrationtest/pom.xml
@@ -148,7 +148,7 @@
         <artifactId>jacoco-maven-plugin</artifactId>
         <configuration>
           <destFile>../implementation/target/jacoco-it.exec</destFile>
-          <includes>org.opendaylight.controller.*</includes>
+          <includes><include>org.opendaylight.controller.*</include></includes>
         </configuration>
         <executions>
           <execution>
