--- a/opendaylight/md-sal/clustered-data-store/integrationtest/pom.xml
+++ b/opendaylight/md-sal/clustered-data-store/integrationtest/pom.xml
@@ -340,23 +340,13 @@
         <sonar.jacoco.itReportPath>../implementaiton/target/jacoco-it.exec</sonar.jacoco.itReportPath>
     </properties>
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.5.3.201107060350</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.5.3.201107060350</version>
                 <configuration>
                     <destFile>../implementation/target/jacoco-it.exec</destFile>
-                    <includes>org.opendaylight.controller.*</includes>
+                    <includes><include>org.opendaylight.controller.*</include></includes>
                 </configuration>
                 <executions>
                     <execution>
