--- a/opendaylight/switchmanager/implementation/pom.xml
+++ b/opendaylight/switchmanager/implementation/pom.xml
@@ -73,7 +73,7 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <configuration>
-          <includes>org.opendaylight.controller.*</includes>
+          <includes><include>org.opendaylight.controller.*</include></includes>
         </configuration>
         <executions>
           <execution>
