Make FlowConfig flow action parsing extensible
    - So that flowprogrammer northbound action parsing logic is not tied
      to the action classes currently present in controller, but extensible
      to any new action extending sal.action.Action
    - Allow dynamic pluggability of new IFlowActionsProvider services which bring
      in new set of action classes. The IFlowActionsProvider services register
      with a new IFlowActionFactory service which mantains the list of available
      action classes and provide the utility to parse them from String form
    - In ToSalConversionsUtils fixed function fromNodeConnectorRef which now
      is generating null node connector which cause Junit to fail. Function
      is used in Junit code only.
    - Fixed bug unveiled by new action classes in protocol_plugin stub where
      SetDlSrc/Dst actions were deliberately created with 5 bytes MAC addresses.
      Fix corresponding handling in nortbound IT.
    - Have Action child classes' fromString() be reverse of toString()
    - Have Output and Enqueue to accept port field in NodeConnector form
    - Added Junit
    - Bumped SAL package major version as change breaks backward compatibility
      for classes that extend Action in external projects and for code which
      checks on old Action.getType()

Change-Id: Ib402f9776785f0d55cce2e175daf0a27abe7cc8e
Signed-off-by: Alessandro Boch <aboch@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -84,7 +84,7 @@
     <containermanager.it.version>0.5.2-SNAPSHOT</containermanager.it.version>
     <switchmanager.api.version>0.7.1-SNAPSHOT</switchmanager.api.version>
     <connectionmanager.version>0.1.2-SNAPSHOT</connectionmanager.version>
-    <sal.version>0.8.1-SNAPSHOT</sal.version>
+    <sal.version>1.0.0-SNAPSHOT</sal.version>
     <sal.networkconfiguration.version>0.0.3-SNAPSHOT</sal.networkconfiguration.version>
     <sal.connection.version>0.1.2-SNAPSHOT</sal.connection.version>
     <networkconfig.bridgedomain.northbound.version>0.0.3-SNAPSHOT</networkconfig.bridgedomain.northbound.version>
@@ -921,7 +921,7 @@
       <dependency>
         <groupId>org.opendaylight.controller</groupId>
         <artifactId>sal.implementation</artifactId>
-        <version>${controller.version}</version>
+        <version>${sal.version}</version>
       </dependency>
 
       <!-- SAL Extension bundles -->
