*Removed the target-ide build directory, moving it back to target. *Added missing build-helper-maven-plugin plugins to some poms. *Cleaned up overrides to build-helper-maven-plugins where the override did not list all of the correct source directories.
Change-Id: I84cdf02501f754d5b800ed454761c74393829f0e

Change-Id: If47eff75e0f57e7ad0ebbcd687c8a750798e32f9
Signed-off-by: dbavery <devin.avery@brocade.com>

--- a/opendaylight/config/netty-event-executor-config/pom.xml
+++ b/opendaylight/config/netty-event-executor-config/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>yang-maven-plugin</artifactId>
          </plugin>
          <plugin>
+             <groupId>org.codehaus.mojo</groupId>
+             <artifactId>build-helper-maven-plugin</artifactId>
+         </plugin>
+         <plugin>
             <groupId>org.apache.felix</groupId>
             <artifactId>maven-bundle-plugin</artifactId>
             <extensions>true</extensions>
