--- a/opendaylight/config/yang-test/pom.xml
+++ b/opendaylight/config/yang-test/pom.xml
@@ -129,6 +129,10 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 </project>
