--- a/opendaylight/config/netty-config-api/pom.xml
+++ b/opendaylight/config/netty-config-api/pom.xml
@@ -47,6 +47,10 @@
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-maven-plugin</artifactId>
          </plugin>
+         <plugin>
+             <groupId>org.codehaus.mojo</groupId>
+             <artifactId>build-helper-maven-plugin</artifactId>
+         </plugin>
       </plugins>
    </build>
 </project>
