--- a/opendaylight/md-sal/samples/pom.xml
+++ b/opendaylight/md-sal/samples/pom.xml
@@ -19,6 +19,7 @@
 		<module>toaster</module>
 		<module>toaster-consumer</module>
 		<module>toaster-provider</module>
+    <module>l2switch</module>
   </modules>
 
     <profiles>
