Grant GitHub Replication

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	state = active
 	description = OpenDaylight controller
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group ldap/gerrit-controller-commiters
@@ -27,6 +26,7 @@
 	owner = group ldap/gerrit-controller-commiters
 	read = group Administrators
 	read = group Anonymous Users
+	read = group GitHub Replication
 	read = group Non-Interactive Controller Users
 	read = group Registered Users
 	read = group ldap/gerrit-controller-commiters
