Resolve Bug:623 : Generate private key using bouncycastle.
Add dependency on bouncycastle and use it to generate private key in PEM
format when key file is not present on the filesystem.

Change-Id: I07290e0f361151743a50559c26255eab23cababb
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -1481,7 +1481,16 @@
             <artifactId>configuration</artifactId>
             <version>${configuration.version}</version>
           </dependency>
-
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>1.50</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk15on</artifactId>
+                <version>1.50</version>
+            </dependency>
     </dependencies>
   </dependencyManagement>
 
