BUG-672 Add includeExtensions property to Xml directory persister adapter.
This property allows to filter initial config files by extension.
Property supports multiple extensions separated by ','.
This property is optional, and if not present, all files are picked up regardless of their extension.

Change-Id: I6029bd48fa3b576006a4409d8f19e0c4956de036
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/opendaylight/distribution/opendaylight/src/main/resources/configuration/config.ini
+++ b/opendaylight/distribution/opendaylight/src/main/resources/configuration/config.ini
@@ -28,6 +28,8 @@ netconf.config.persister.active=1,2
 # read startup configuration
 netconf.config.persister.1.storageAdapterClass=org.opendaylight.controller.config.persist.storage.directory.xml.XmlDirectoryStorageAdapter
 netconf.config.persister.1.properties.directoryStorage=configuration/initial/
+# include only xml files, files with other extensions will be skipped, multiple extensions are permitted e.g. netconf.config.persister.1.properties.includeExtensions=xml,cfg,config
+netconf.config.persister.1.properties.includeExtensions=xml
 netconf.config.persister.1.readonly=true
 
 netconf.config.persister.2.storageAdapterClass=org.opendaylight.controller.config.persist.storage.file.xml.XmlFileStorageAdapter
